logs/Slang/generated/keywords/5.6.2--keyword_cmos.sv.log
name: keyword_cmos
description: The 'cmos' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cmos.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cmos.sv:8:8: error: expected declarator
    bit cmos;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cmos.sv:8:9: error: expected member
    bit cmos;
        ^~~~
